# labott

./: .gitignore  LICENSE  MANIFEST.in  README.md  TO DO.md  _old_setup_calpy.py  labott.code-workspace  opt-tutorial.ipynb  performance.md  requirements.txt  setup.cfg  setup.py  setup_calpy.py
.github/instructions/: ao-instructions.instructions.md
.github/workflows/: publish-pypi-template.yml  tests.yml
__init_script__/: initCalpy.py
aoptics/: __init__.py  __main__.py  __version__.py  alignment.py  analyzer.py
aoptics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aoptics/core/: __init__.py  fitsclass.py  read_config.py  read_iffconfig.py  root copy.py  root.py  root_copy.py
aoptics/devices/: __init__.py  deformable_mirror.py  deformable_mirrors.py  interferometer.py
aoptics/dmutils/: flattening.py  iff_acquisition_preparation.py  iff_module.py  iff_processing.py
aoptics/ground/: computerec.py  logger.py  osutils.py  roi.py  zernike.py
docs/: Makefile  api.rst  conf.py  index.rst  readme.md  requirements.txt
gentle2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
labott/: __init__.py  __version__.py  alignment.py  analyzer.py  deformable_mirror.py  interferometer.py
labott/core/: i4d.py  read_iffconfig.py  root.py
notebook/: scratch_zernike_fitting.ipynb
opticalib/: __init__.py  __version__.py  alignment.py  analyzer.py  optimized stitching.py  super_stitch.py  typings.py
tests/: README.md  conftest.py  test_dmutils_flattening.py  test_dmutils_iff_processing.py  test_ground_modal_decomposer.py  test_ground_osutils.py
(+106 files in other folders)
