[metadata]
name = labott
version = attr: labott.__version__
author = attr: labott.__author__
author_email = attr: labott.__author_email__
description = attr: labott.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: labott.__url__
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires = 
    # Dependencies will be read from requirements.txt
    # Add any additional dependencies here if needed

[options.package_data]
labott = *.py
