[metadata]
name = aoptics
version = attr: aoptics.__version__
author = attr: aoptics.__author__
author_email = attr: aoptics.__author_email__
description = attr: aoptics.__description__
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: aoptics.__url__
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.11
install_requires = 
    # Dependencies will be read from requirements.txt
    # Add any additional dependencies here if needed

[options.package_data]
aoptics = 
    core/_configurations/*.yaml
